--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">BaseProject</string>
+    <string name="app_name">studySample</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_generate_apk">GenerateAPKActivity</string>
+    <string name="title_activity_back_analysis">BackAnalysisActivity</string>
 
 </resources>
